--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nada Moharam Artist Website</title>
     <link rel="stylesheet" href="ArtistWebsitestyles.css">
+    <link rel="icon" href="noon.png" type="image/x-icon">
+
 </head>
 <body>
 <!-- Website Icon -->
-<link rel="icon" href="smileygif.gif" type="image/x-icon">
+
 
     <!-- Typewriter Container (Top 10%) -->
     <div class="typewriter-container">
@@ -496,7 +498,7 @@
                         
                             <div class="video-container" style="position: relative; cursor: pointer;">
                                 <!-- Thumbnail Image -->
-                                <img src="lakepimentsthumb.jpg" alt="Video Thumbnail" style="width: 100%; display: block;">
+                                <img src="sulfurthumb.png" alt="Video Thumbnail" style="width: 100%; display: block;">
                                 <!-- Custom Play Button -->
                                 <svg style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 80px; height: 80px; fill: white; opacity: 0.8;" viewBox="0 0 100 100">
                                     <circle cx="50" cy="50" r="40" fill="rgba(0,0,0,0.6)"/>
@@ -507,7 +509,7 @@
                             <!-- Script to replace thumbnail with YouTube embed on click -->
                             <script>
                                 document.querySelector('.video-container').addEventListener('click', function() {
-                                    this.innerHTML = '<iframe width="100%" height="auto" src="https://www.youtube.com/embed/NNrgEgeQinE?autoplay=1&modestbranding=1&rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>';
+                                    this.innerHTML = '<iframe width="100%" height="auto" src="https://www.youtube.com/embed/anr_2BaLxdU?autoplay=1&modestbranding=1&rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>';
                                 });
                             </script>
                             
